# scenario-forge

./: .gitignore  CLAUDE.md  DOLT_REMOTE.md  README.md  manifest  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
ai/: bootstrap.md  dashboard.md  data-flow-diagrams.md  dispatch-prompt-template.md
docs/: attack-patterns-reference.md
scripts/: run_parsimony_experiment.py
tests/: test_actor_type_compatible_set.py  test_atlas_derived_patterns.py  test_atlas_derived_sssom.py  test_attack_goals.py  test_attack_pattern_schema.py  test_attack_tree_repair.py  test_attack_tree_retry.py  test_blank_leaf_validation.py  test_candidates.py  test_cap_scenarios_per_pattern.py  test_capability_level_floor.py  test_consistency_enforcement.py  test_context_builders.py  test_coverage.py  test_cross_artifact_consistency.py  test_deterministic_gherkin.py  test_direct_threat_mapping.py  test_diversity_tracker.py  test_enriched_kill_chains.py  test_entry_point_direction.py  test_entry_point_directionality.py  test_entry_point_diversity.py  test_ep_coverage_controllability.py  test_eval.py  test_gate_logic_validation.py  test_generate_cluster.py  test_goal_category_anchoring.py  test_goal_narrative_reconciliation.py  test_goal_profile_compatibility.py  test_insider_access_floor.py  test_kc_subcodes.py  test_kc_threat_mapping.py  test_kcx_subcodes.py  test_kill_chain_scaffold.py  test_leaf_budget_injection.py  test_leaf_technique_provenance.py  test_llm_client_headers.py  test_llm_client_temperature.py  test_log_config.py  test_ontology_context.py  (+40 more)
(+122 files in other folders)
