[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scenario-forge"
version = "0.1.0"
description = "LLM-driven red-teaming scenario generator for LLM and agentic AI systems"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
scenario-forge = "scenario_forge.cli:app"
